Retrait de la modification de stock lorsqu'on retire une vente. et modification du fonctionnement des recompenses